@startuml MODULO-PROYECTOS-TAREAS

!define ENTITY_COLOR #E8F5E9
!define ENUM_COLOR #FFF9C4
!define PIVOT_COLOR #E1F5FE

title XHION CORE - Módulo de Proyectos y Tareas\nGestión de Proyectos, Tareas, Etapas y Colaboración

' ============================================
' ENUMERACIONES
' ============================================

enum EstadoProyecto <<enumeration>> ENUM_COLOR {
  Activo
  Completado
  En_Pausa
  Archivado
}

enum EstadoTarea <<enumeration>> ENUM_COLOR {
  Por_Hacer
  En_Progreso
  Hecho
  Bloqueado
}

enum EstadoEtapa <<enumeration>> ENUM_COLOR {
  Pendiente
  En_Progreso
  Completada
}

enum PrioridadTarea <<enumeration>> ENUM_COLOR {
  Baja
  Media
  Alta
  Urgente
}

enum RolProyecto <<enumeration>> ENUM_COLOR {
  Responsable
  Miembro
  Observador
}

' ============================================
' ENTIDADES PRINCIPALES
' ============================================

class Proyecto <<entity>> ENTITY_COLOR {
  + id: UUID <<PK>>
  + nombre: String(255)
  + descripcion: String
  + estado: EstadoProyecto
  + responsableId: UUID <<FK>>
  + departamentoId: UUID <<FK>>
  + fechaInicio: Date
  + fechaFin: Date
  + fechaCreacion: DateTime
  + fechaActualizacion: DateTime
  + fechaEliminacion: DateTime
  --
  + getResponsable(): Usuario
  + getDepartamento(): Departamento
  + getTareas(): Tarea[]
  + getEtapas(): Etapa[]
  + getMiembros(): Usuario[]
  + getDocumentos(): DocumentoProyecto[]
  + getPresupuesto(): PresupuestoProyecto
  + calcularProgreso(): Float
  + calcularDuracion(): Int
  + estaAtrasado(): Boolean
  + archivar(): void
  + restaurar(): void
}

class Tarea <<entity>> ENTITY_COLOR {
  + id: UUID <<PK>>
  + titulo: String(255)
  + descripcion: String
  + estado: EstadoTarea
  + prioridad: PrioridadTarea
  + fechaVencimiento: Date
  + proyectoId: UUID <<FK>>
  + etapaId: UUID <<FK>>
  + asignadoId: UUID <<FK>>
  + creadorId: UUID <<FK>>
  + resumenIa: String
  + fechaCreacion: DateTime
  + fechaActualizacion: DateTime
  + fechaCompletado: DateTime
  + fechaEliminacion: DateTime
  --
  + getProyecto(): Proyecto
  + getEtapa(): Etapa
  + getAsignado(): Usuario
  + getCreador(): Usuario
  + getComentarios(): Comentario[]
  + asignarA(usuario: Usuario): void
  + cambiarEstado(estado: EstadoTarea): void
  + cambiarPrioridad(prioridad: PrioridadTarea): void
  + completar(): void
  + estaVencida(): Boolean
  + diasRestantes(): Int
}

class Etapa <<entity>> ENTITY_COLOR {
  + id: UUID <<PK>>
  + nombre: String(100)
  + descripcion: String
  + color: String(7)
  + orden: Int
  + proyectoId: UUID <<FK>>
  + fechaInicio: Date
  + fechaFin: Date
  + estado: EstadoEtapa
  + fechaCreacion: DateTime
  + fechaActualizacion: DateTime
  --
  + getProyecto(): Proyecto
  + getTareas(): Tarea[]
  + calcularProgreso(): Float
  + moverTarea(tarea: Tarea): void
  + completar(): void
  + reordenar(nuevoOrden: Int): void
}

class Comentario <<entity>> ENTITY_COLOR {
  + id: UUID <<PK>>
  + contenido: String
  + usuarioId: UUID <<FK>>
  + tareaId: UUID <<FK>>
  + fechaCreacion: DateTime
  --
  + getUsuario(): Usuario
  + getTarea(): Tarea
  + editar(contenido: String): void
  + eliminar(): void
}

class ProyectoMiembro <<pivot>> PIVOT_COLOR {
  + proyectoId: UUID <<PK,FK>>
  + usuarioId: UUID <<PK,FK>>
  + rol: RolProyecto
  + fechaUnion: DateTime
  --
  + getProyecto(): Proyecto
  + getUsuario(): Usuario
  + cambiarRol(rol: RolProyecto): void
  + remover(): void
}

' ============================================
' RELACIONES
' ============================================

' Proyecto - Usuario (Responsable)
Proyecto --> Usuario : responsable

' Proyecto - Departamento
Proyecto --> Departamento : pertenece a

' Proyecto - Tarea
Proyecto --> Tarea : contiene

' Proyecto - Etapa
Proyecto --> Etapa : organizado en

' Proyecto - ProyectoMiembro (Pivot)
Proyecto --> ProyectoMiembro : tiene
Usuario --> ProyectoMiembro : participa en

' Tarea - Etapa
Tarea --> Etapa : pertenece a

' Tarea - Usuario (Asignado)
Tarea --> Usuario : asignado a

' Tarea - Usuario (Creador)
Tarea --> Usuario : creado por

' Tarea - Comentario
Tarea --> Comentario : tiene

' Comentario - Usuario
Comentario --> Usuario : escrito por

' Enumeraciones (Dependencias)
Proyecto ..> EstadoProyecto : <<use>>
Tarea ..> EstadoTarea : <<use>>
Tarea ..> PrioridadTarea : <<use>>
Etapa ..> EstadoEtapa : <<use>>
ProyectoMiembro ..> RolProyecto : <<use>>

note right of Proyecto
  **Proyecto**
  - Unidad principal de organización
  - Puede tener presupuesto asignado
  - Soporta eliminación lógica
  - Calcula progreso automáticamente
  - Gestiona fechas y plazos
end note

note right of Tarea
  **Tarea**
  - Unidad de trabajo atómica
  - Asignable a un usuario
  - Organizada en etapas (Kanban)
  - Soporta priorización
  - Incluye resumen generado por IA
  - Permite comentarios colaborativos
end note

note right of Etapa
  **Etapa**
  - Fase o hito del proyecto
  - Orden personalizable
  - Color identificador
  - Agrupa tareas relacionadas
  - Calcula progreso por etapa
end note

note bottom of ProyectoMiembro
  **Roles en Proyecto**
  - Responsable: Control total
  - Miembro: Colaborador activo
  - Observador: Solo lectura
end note

@enduml
